--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,6 @@ body {
 }
 
 .wrap-content {
-
-
     position: absolute;
     top: 50%;
     transform: translatey(-50%);
@@ -1147,8 +1145,25 @@ body {
 
 @media only screen and (max-width: 1024px) {
     
-    .navbar-light .navbar-toggler {
+.navbar-light .navbar-toggler {
     border-color: rgb(255, 69, 69);
+}
+
+.navbar .navegacion-barra{
+    flex-wrap: nowrap;
+}
+
+.navbar .navbar-brand {
+
+    font-family: 'Kaushan Script', cursive;
+
+    padding: 5px 0px 0px 3px;
+
+    color: #000000;
+
+    letter-spacing: 5px;
+
+    font-size: 25px;
 }
     
     .section-1 {
@@ -1169,8 +1184,8 @@ body {
 }
     .wrap-content {
         position: absolute;
-        top: 70%;
-        /* transform: translatey(-50%); */
+        top: 50%;
+        transform: translatey(-50%);
     }
 
     .navbar {
@@ -1251,8 +1266,8 @@ body {
 
     .wrap-content {
         position: absolute;
-        top: 68%;
-        /* transform: translatey(-50%); */
+        top: 50%;
+        transform: translatey(-50%);
     }
 
     .text-box {
