--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,28 @@ body {
 
 }
 
+#modal1 span.title{
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    font-size: 25px;
+    color: #000;
+    font-family: 'Open sans', sans-serif;
+    padding-bottom:20px;
+    padding-top:20px;
+}
 
+#modal1 ul{
+    list-style: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 15px;
+    color: #000;
+    font-family: 'Open sans', sans-serif;
+    text-align: center;
+  }
+  
 
 /*stickey nav*/
 
@@ -264,7 +285,7 @@ body {
     background: #ffebb9;
     background: tomato;
     background: url("../img/section3/countdown-bg0.jpg") no-repeat;
-    background-size: cover;
+    background-size: 100%;
     background-position: center;
     padding: 80px 0px;
 
