fix colores y horario

--- a/css/style.css
+++ b/css/style.css
@@ -283,9 +283,8 @@ body {
 
 .section-3 {
     background: #ffebb9;
-    background: tomato;
     background: url("../img/section3/countdown-bg0.jpg") no-repeat;
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     padding: 80px 0px;
 
@@ -645,7 +644,7 @@ body {
     text-transform: capitalize;
     text-align: center;
     padding-bottom: 60px;
-    color: #6B1717;
+    color: #D99379;
     font-weight: bold;
 }
 
@@ -692,7 +691,7 @@ body {
 }
 
 .event .content h1 {
-    color: #6B1717;
+    color: #D99379;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Dancing Script', cursive;
@@ -754,7 +753,7 @@ body {
     text-transform: capitalize;
     text-align: center;
     padding-bottom: 60px;
-    color: #6B1717;
+    color: #D99379;
     font-weight: bold;
 }
 
@@ -844,7 +843,7 @@ body {
 }
 
 .section-6 .people .content h1 {
-    color: #6B1717;
+    color: #D99379;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     font-family: 'Dancing Script', cursive;
@@ -876,7 +875,7 @@ body {
 
 
 .section-7 {
-    background: #D9997D;
+    background: rgba(230, 137, 106, 0.4);
     background-size: cover;
     background-position: center;
     padding: 80px 0px;
@@ -892,11 +891,11 @@ body {
     text-transform: capitalize;
     text-align: center;
     padding-bottom: 20px;
-    color: #6B1717;
+    color: #D99379;
     font-weight: bold;
 }
 
-.section-7 .heading h1::after {
+/* .section-7 .heading h1::after {
 
     content: "";
     display: block;
@@ -907,7 +906,7 @@ body {
     height: 45px;
     width: 100%;
 
-}
+} */
 
 
 .gallery-image {
@@ -950,7 +949,7 @@ body {
 
 
 .section-8 {
-    background: #D9997D;
+    background: rgba(230, 137, 106, 0.4);
     background-size: cover;
     background-position: center;
     padding: 80px 0px;
@@ -961,7 +960,7 @@ body {
 
 
 .section-8 .heading h1 {
-    color: #6B1717;
+    color: #D99379;
     font-size: 45px;
     font-weight: bold;
     font-family: 'Dancing Script', cursive;
@@ -1054,8 +1053,8 @@ body {
 
 .send-button .btn.btn-primary {
     margin-top: 15px;
-    background: #3F0909;
-    border-color: #3F0909;
+    background: #D99379;
+    border-color: #D99379;
     padding: 5px 20px;
     text-transform: uppercase;
 }
@@ -1363,7 +1362,7 @@ body {
 
 
     .section-8 {
-        background: #D9997D;
+        background: rgba(230, 137, 106, 0.4);
         background-size: cover;
         background-position: center;
         padding: 80px 0px;
