--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ body {
 
 .text-box .small-text {
     font-family: 'Cinzel', serif;
+    font-weight: 600;
     font-size: 19px;
     padding: 0;
     margin: 0;
@@ -247,7 +248,6 @@ body {
 
     content: "";
     display: block;
-    background: url("../img/border-up.png");
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: bottom center;
@@ -260,7 +260,6 @@ body {
 
     content: "";
     display: block;
-    background: url("../img/border.png");
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: top center;
@@ -694,7 +693,6 @@ body {
 
     content: "";
     display: block;
-    background: url("../img/border.png");
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: top center;
