--- a/css/style.css
+++ b/css/style.css
@@ -240,20 +240,9 @@ body {
     font-family: 'Dancing Script', cursive;
     text-transform: capitalize;
     text-align: center;
-    padding-bottom: 60px;
-    color: #ff4545;
-}
-
-.section-2 h1::before {
-
-    content: "";
-    display: block;
-    background-size: 40%;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    height: 70px;
-    width: 100%;
-
+    padding-bottom: 20px;
+    color: #F2F2F2;
+    font-weight: bold;
 }
 
 .section-2 h1::after {
@@ -741,8 +730,10 @@ body {
 }
 
 .event .content p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Manrope';
+    font-size: 18px;
     text-align: center;
+    line-height: 1.4;
 }
 
 .event ul {
@@ -780,7 +771,9 @@ body {
 
 .section-6 p {
     color: #000;
-    font-family: 'Open sans', sans-serif;
+    font-family: 'Manrope';
+    font-size: 18px;
+    line-height: 1.4;
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
@@ -893,7 +886,7 @@ body {
 }
 
 .section-6 .people .content p {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Manrope';
     font-size: 18px;
     color: #6c6c6c;
 }
@@ -1014,7 +1007,8 @@ body {
 .section-8 p {
     padding: 80px 0px;
     color: #F2F2F2;
-    font-family: 'Open sans', sans-serif;
+    font-family: 'Manrope';
+    font-size: 18px;
     text-align: center;
 }
 
@@ -1350,21 +1344,9 @@ body {
 
     }
 
-    .section-2 h1::before {
-        content: "";
-        display: block;
-        background: url("../img/border-up.png");
-        background-size: 80%;
-        background-repeat: no-repeat;
-        background-position: bottom center;
-        height: 70px;
-        width: 100%;
-    }
-
     .section-2 h1::after {
         content: "";
         display: block;
-        background: url("../img/border.png");
         background-size: 80%;
         background-repeat: no-repeat;
         background-position: top center;
