datos bancarios fix style

--- a/css/style.css
+++ b/css/style.css
@@ -769,6 +769,12 @@ body {
 
 }
 
+.section-6 li {
+    font-family: 'Manrope';
+    font-size: 16px;
+    line-height: 1.4;
+}
+
 .section-6 p {
     color: #000;
     font-family: 'Manrope';
